fixed overflow

--- a/style.css
+++ b/style.css
@@ -44,6 +44,7 @@ p{
 /* Hero */
 .hero{
     align-items: center;
+    overflow: hidden;
 }
 .image-container{
     position: relative;
@@ -112,6 +113,7 @@ p{
     background-color: rgb(255, 235, 219);
     padding-top: 70px;
     padding-bottom: 70px;
+    overflow: hidden;
 }
 .personal-info{
     flex-direction: column;
@@ -193,12 +195,12 @@ h2
 }
 
 .personal-info{
-    animation: fade-in-left 2s ease-in-out;
+    animation: fade-in-left 2s ease-in-out both;
     animation-timeline: view();
     animation-range: entry 10%;
 }
 .image-container{
-    animation: fade-in-right 2s ease-in-out;
+    animation: fade-in-right 2s ease-in-out both;
     animation-timeline: view();
     animation-range: entry 10%;
 }
@@ -207,6 +209,7 @@ h2
     0%{
         opacity: 0;
         transform: translateX(-400px);
+        filter: blur(5px);
     }
     100%{
         transform: translateX(0px);
@@ -216,6 +219,7 @@ h2
     0%{
         opacity: 0;
         transform: translateX(400px);
+        filter: blur(5px);
     }
     100%{
         transform: translateX(0px);
